--- a/src/sass/box/_slide.sass
+++ b/src/sass/box/_slide.sass
@@ -59,4 +59,9 @@
 		button
 			background: transparent
 			border: 2px solid $color-blue
+			background: $color-blue
+			margin: .3rem
+			color: #ffffff
+			font:
+				family: $OS
 			
