--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -14,9 +14,13 @@
 @import 'box/header'
 /*Header*/
 /*********************/
+@import 'box/breadcrumbs'
 @import 'box/slide'
 @import 'box/catalog'
 @import 'box/amenities'
+@import 'box/portfolio'
+@import 'box/patron'
+@import 'box/call_back'
 /*********************/
 
 /************************/
