--- a/src/sass/box/_amenities.sass
+++ b/src/sass/box/_amenities.sass
@@ -1,2 +1,47 @@
 .amenities-cl
-    +bg(assestent)
+	+bg(bg_catalog, jpg)
+	background-repeat: repeat
+	background-size: auto
+	.middle
+		display: flex
+		flex-direction: column
+		justify-content: center
+	&_left
+		
+	button
+		@extend .button_cl
+		@extend .shadow
+		width: 100%
+		background: $color-blue
+		color: #ffffff
+		margin: 0 auto
+		display: block
+		padding: .5rem 
+		margin-top: 1rem
+	&_right
+		display: flex
+		justify-content: center 
+		p
+			color: $color-blue
+			text-align: center
+			font:
+				size: 2rem
+				family: $CC
+		&>div
+			&:last-child
+				p
+					color: $color-blue-3
+				li
+					background: $color-blue-3
+	&_list
+		display: flex
+		justify-content: center
+		flex-direction: row
+		flex-wrap: wrap
+		li
+			padding: .4rem
+			background: $color-blue
+			margin: .2rem
+			a 
+				color: #fff
+				text-align: center
